--- a/css/main-style.css
+++ b/css/main-style.css
@@ -5,7 +5,7 @@ h2 {
   padding: 40px;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif;
-  font-weight: 300;
+  font-weight: 900;
 }
 body {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -93,7 +93,7 @@ header {
   transition: transform 0.5s;
   transform: scale(1.1);
 }
-.row > .col-sm > img {
+.imgExploreNearby {
   height: 72px;
   width: 72px;
   border-radius: 15px;
@@ -116,4 +116,14 @@ header {
   text-align: left;
   margin-left: -2%;
   font-weight: 900;
+}
+.imageLiveAnywhere {
+  height: 320.06px;
+  width: 299.999px;
+  border-radius: 10px;
+}
+.myH3LiveAnywhere {
+  font-size: 17px;
+  font-weight: 900;
+  padding: 5px;
 }
