--- a/css/main-style.css
+++ b/css/main-style.css
@@ -118,12 +118,51 @@ header {
   font-weight: 900;
 }
 .imageLiveAnywhere {
-  height: 320.06px;
-  width: 299.999px;
+  height: 100%;
+  width: 100%;
   border-radius: 10px;
 }
 .myH3LiveAnywhere {
   font-size: 17px;
   font-weight: 900;
   padding: 5px;
+}
+.container-becomeHost {
+  padding-top: 100px;
+
+  position: relative;
+}
+.container-becomeHost > img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 15px;
+}
+.myBtnImg {
+  position: absolute;
+
+  top: 73%;
+  left: 10%;
+  color: black;
+  font-weight: 900;
+  border-radius: 8px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+.becomeHostH3 {
+  position: absolute;
+  top: 35%;
+  left: 10%;
+  color: white;
+  font-weight: 900;
+  font-size: 50px;
+}
+.becomeHostP {
+  position: absolute;
+  top: 58%;
+  left: 10%;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
 }
